# pav-proof

./: .gitignore  CLAUDE.md  LICENSE  Makefile  _RocqProject  go.mod  go.sum  pav-proof.opam
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  mailbot.yml
code/github_com/sanjit_bhat/pav/: alicebob.v  auditor.v  client.v  ktcore.v  merkle.v  server.v
etc/: update-goose.sh
generatedproof/github_com/sanjit_bhat/pav/: auditor.v  client.v  ktcore.v  server.v
proof/: client.v  cryptoffi.v  ktcore.v  prelude.v  server.v
proof/auditor_proof/: auditor.v  base.v  rpc.v
proof/client_proof/: client.v  rpc.v
proof/ktcore_proof/: base.v  blame.v  evidence.v  ktcore.v  sigpred.v
proof/server_proof/: rpc.v  server.v
