opam-version: "2.0"
license: "MIT"
maintainer: "Sanjit Bhat"
authors: "Sanjit Bhat"
homepage: "https://github.com/sanjit-bhat/pav-proof"
bug-reports: "https://github.com/sanjit-bhat/pav-proof/issues"
dev-repo: "git+https://github.com/sanjit-bhat/pav-proof.git"
version: "dev"
synopsis: "Program proofs for pav"

depends: [
  "perennial"
]

pin-depends: [
  ["perennial.dev"             "git+https://github.com/mit-pdos/perennial#4bd989e3f7"]

  ## begin indirect
  ["coq-record-update.dev"     "git+https://github.com/tchajed/coq-record-update#7b26452103"]
  ["iris-named-props.dev"      "git+https://github.com/tchajed/iris-named-props#c388714a93"]
  ["rocq-iris.dev"             "git+https://gitlab.mpi-sws.org/iris/iris#d8f049ee6e"]
  ["rocq-stdpp.dev"            "git+https://gitlab.mpi-sws.org/iris/stdpp#a09c2a19de"]
  ## end
]

build: [make "-j%{jobs}%"]
install: ["go" "tool" "perennial-cli" "install"]
build-env: [
  [GOCACHE = "%{build}%/_build/.gocache"]
]
