opam-version: "2.0"
license: "MIT"
maintainer: "Sanjit Bhat"
authors: "Sanjit Bhat"
homepage: "https://github.com/sanjit-bhat/pav-proof"
bug-reports: "https://github.com/sanjit-bhat/pav-proof/issues"
dev-repo: "git+https://github.com/sanjit-bhat/pav-proof.git"
version: "dev"
synopsis: "Program proofs for pav"

depends: [
  "perennial"
]

pin-depends: [
  ["perennial.dev"             "git+https://github.com/mit-pdos/perennial#79574bc98617d2a5c0434a96534055a6b7ca33b6"]

  ## begin indirect
  ["coq-record-update.dev"     "git+https://github.com/tchajed/coq-record-update#7b2645210331c3ec4ed75fa5ad0840a723f25151"]
  ["rocq-stdpp.dev"            "git+https://gitlab.mpi-sws.org/iris/stdpp#a09c2a19de6898fd470983ca2363ade519d70fe1"]
  ["rocq-iris.dev"             "git+https://gitlab.mpi-sws.org/iris/iris#d8f049ee6e28201a8781622ab4390a62c5293a85"]
  ["iris-named-props.dev"      "git+https://github.com/tchajed/iris-named-props#c388714a93b1c043ed42a3f446280abd5113d26f"]
  ## end
]

build: [make "-j%{jobs}%"]
install: ["go" "tool" "perennial-cli" "install"]
build-env: [
  [GOCACHE = "%{build}%/_build/.gocache"]
]
